RESOLVED FIXED18728
SQUIRRELFISH: invalid regular expression constants should throw exceptions
https://bugs.webkit.org/show_bug.cgi?id=18728
Summary SQUIRRELFISH: invalid regular expression constants should throw exceptions
Cameron Zwarich (cpst)
Reported 2008-04-24 21:18:34 PDT
Currently, SquirrelFish doesn't throw exceptions for invalid regular expression constants. The exception gets created, but there is no VM_CHECK_EXCEPTION() in the body of op_new_regexp, so it gets ignored. However, we should really just create the code to throw the exception at compile time. This affects the JavaScriptCore regression test ecma_3/RegExp/regress-188206.js.
Attachments
Proposed patch (2.06 KB, patch)
2008-04-24 21:29 PDT, Cameron Zwarich (cpst)
mjs: review+
Cameron Zwarich (cpst)
Comment 1 2008-04-24 21:29:39 PDT
Created attachment 20807 [details] Proposed patch This patch fixes the test and is a 0.7% progression on SunSpider, because of the better code path in op_new_regexp.
Maciej Stachowiak
Comment 2 2008-04-24 21:49:06 PDT
Comment on attachment 20807 [details] Proposed patch r=me
Oliver Hunt
Comment 3 2008-04-25 01:33:08 PDT
Landed r32537
Note You need to log in before you can comment on or make changes to this bug.