2008-04-25  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

Reviewed by Maciej.

        Bug 18728: SQUIRRELFISH: invalid regular expression constants should throw exceptions
        <https://bugs.webkit.org/show_bug.cgi?id=18728>

        Fixes another regression test.

        * kjs/nodes.cpp:
        (KJS::RegExpNode::emitCode):



git-svn-id: http://svn.webkit.org/repository/webkit/branches/squirrelfish@33286 268f45cc-cd09-0410-ab3c-d52691b4dbfc